--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -7,26 +7,19 @@
     android:layout_marginBottom="3dp"
     android:background="@color/white"
     android:gravity="center">
+    <ImageView
+        android:id="@+id/item_image"
+        android:layout_width="80dp"
+        android:layout_height="100dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp" />
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="140dp"
-        android:layout_weight=".3"
-        android:gravity="center">
-
-        <ImageView
-            android:id="@+id/item_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:minWidth="80dp"
-            android:minHeight="100dp"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:gravity="center"
-        android:layout_weight=".7">
+        android:layout_margin="10dp"
+        android:gravity="center">
         <TextView
             android:id="@+id/item_title"
             android:layout_width="match_parent"
