--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,8 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/navigation_novel"
+        android:icon="@drawable/baseline_menu_book_24"
         android:title="@string/novel"/>
     <item
         android:id="@+id/navigation_movie"
-        android:title="@string/nba_player"/>
+        android:icon="@drawable/baseline_local_movies_24"
+        android:title="@string/movie"/>
 </menu>
