--- a/app/src/main/res/layout/activity_detail_movie.xml
+++ b/app/src/main/res/layout/activity_detail_movie.xml
@@ -28,6 +28,8 @@
             android:text="title"
             android:textAlignment="center"
             android:textSize="40sp"
+            android:padding="5dp"
+            android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/detail_movie_image" />
@@ -40,9 +42,42 @@
             android:text="year"
             android:textAlignment="center"
             android:textSize="20sp"
+            android:padding="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/detail_movie_title" />
+        <TextView
+            android:id="@+id/detail_movie_director"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="year"
+            android:padding="5dp"
+            app:layout_constraintEnd_toEndOf="@id/half_guideline"
+            app:layout_constraintTop_toBottomOf="@id/detail_movie_year"
+            app:layout_constraintWidth_percent="0.5"
+            />
+        <TextView
+            android:id="@+id/detail_movie_genre"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="genre"
+            android:padding="5dp"
+            app:layout_constraintStart_toEndOf="@id/half_guideline"
+            app:layout_constraintTop_toBottomOf="@id/detail_movie_year"
+            app:layout_constraintWidth_percent="0.5"
+            />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/half_guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.5"/>
+        <com.google.android.material.divider.MaterialDivider
+            android:id="@+id/detail_novel_divider"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/detail_movie_genre"/>
 
         <TextView
             android:id="@+id/detail_movie_info"
@@ -50,8 +85,9 @@
             android:layout_height="wrap_content"
             android:text="synopsis"
             android:textSize="20sp"
+            android:padding="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/detail_movie_year" />
+            app:layout_constraintTop_toBottomOf="@id/detail_movie_genre" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
