--- a/app/src/main/res/layout/activity_detail_movie.xml
+++ b/app/src/main/res/layout/activity_detail_movie.xml
@@ -50,7 +50,7 @@
             android:id="@+id/detail_movie_director"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="year"
+            android:text="director"
             android:padding="5dp"
             app:layout_constraintEnd_toEndOf="@id/half_guideline"
             app:layout_constraintTop_toBottomOf="@id/detail_movie_year"
@@ -84,7 +84,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="synopsis"
-            android:textSize="20sp"
             android:padding="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
