--- a/app/src/main/res/values/strings_info_novel.xml
+++ b/app/src/main/res/values/strings_info_novel.xml
@@ -20,12 +20,12 @@
             perfectly on track. She will be married by thirty, done having kids by thirty-five,
             and move out to the New York City suburbs, all while climbing the professional ladder in
             the cutthroat art auction world. She\'s not engaged just yet, but she knows her boyfriend, Finn,
-            a surgical resident, is about to propose on their romantic getaway to the Galápagos—days before her thirtieth birthday.
+            a surgical resident, is about to propose on their romantic getaway to the Galapagos—days before her thirtieth birthday.
             Right on time. But then a virus that felt worlds away has appeared in the city,
             and on the eve of their departure, Finn breaks the news: It\'s all hands on deck at the hospital.
             He has to stay behind. You should still go, he assures her, since it would be a shame for all of their nonrefundable
             trip to go to waste. And so, reluctantly, she goes. Almost
-            immediately, Diana's dream vacation goes awry. The whole island is now under quarantine, and she is stranded
+            immediately, Diana\'s dream vacation goes awry. The whole island is now under quarantine, and she is stranded
             until the borders reopen. Completely isolated, she must venture beyond her comfort zone. Slowly, she carves out a
             connection with a local family when a teenager with a secret opens up to Diana, despite her father\'s suspicion of outsiders.
             Diana finds herself examining her relationships, her choices, and herself—and wondering if when she goes\' home, she too will have evolved into someone completely different.</item>
@@ -37,7 +37,7 @@
             Twelve-year-old Bird Gardner lives a quiet existence with his loving but broken father,
             a former linguist who now shelves books in a university library. Bird knows to not ask too many questions,
             stand out too much, or stray too far. For a decade, their lives have been governed by laws written to
-            preserve “American culture” in the wake of years of economic instability and violence. To keep the peace and restore
+            preserve "American culture" in the wake of years of economic instability and violence. To keep the peace and restore
             prosperity, the authorities are now allowed to relocate children of dissidents, especially those of Asian origin, and
             libraries have been forced to remove books seen as unpatriotic—including the work of Bird\'s mother, Margaret,
             a Chinese American poet who left the family when he was nine years old. Bird has grown up disavowing his mother and her poems;
@@ -96,6 +96,9 @@
             Now armed with a new perspective on her own life and his, some past events take on new meaning. Is there anything that she
             would change if she could?</item>
     </string-array>
+
+
+
     <string-array name="novelnotesexecution">
         <item>2022</item>
         <item>Fiction · Thriller · Mystery · Mystery Thriller · Contemporary · Audiobook · Literary Fiction · Crime · Adult · Suspense</item>
@@ -160,12 +163,12 @@
         <item>Mystery · Thriller · Fiction · Mystery Thriller · Audiobook · Suspense · Adult · Crime · Contemporary · Adult Fiction</item>
         <item>April Coutts-Cliveden was the first person Hannah Jones met at Oxford.
             Vivacious, bright, occasionally vicious, and the ultimate It girl, she quickly pulled Hannah into her dazzling orbit. Together, they developed a group of devoted and inseparable friends—Will, Hugh, Ryan, and Emily—during their first term. By the end of the second, April was dead.
-            Now, a decade later, Hannah and Will are expecting their first child, and the man convicted of killing April, former Oxford porter John Neville, has died in prison. Relieved to have finally put the past behind her, Hannah\'s world is rocked when a young journalist comes knocking and presents new evidence that Neville may have been innocent. As Hannah reconnects with old friends and delves deeper into the mystery of April\'s death, she realizes that the friends she thought she knew all have something to hide… including a murder.</item>
+            Now, a decade later, Hannah and Will are expecting their first child, and the man convicted of killing April, former Oxford porter John Neville, has died in prison. Relieved to have finally put the past behind her, Hannah\'s world is rocked when a young journalist comes knocking and presents new evidence that Neville may have been innocent. As Hannah reconnects with old friends and delves deeper into the mystery of April\'s death, she realizes that the friends she thought she knew all have something to hide... including a murder.</item>
     </string-array>
     <string-array name="novelallgoodpeople">
         <item>2022</item>
         <item>Mystery · Thriller · Fiction · Suspense · Adult · Contemporary · Adult Fiction</item>
-        <item>In the propulsive debut novel from the host of the #1 true crime podcast "Crime Junkie," a journalist uncovers her hometown\'s dark secrets when she becomes obsessed with the unsolved murder of her childhood neighbor—and the disappearance of another girl twenty years later.
+        <item>In the propulsive debut novel from the host of the 1st true crime podcast "Crime Junkie," a journalist uncovers her hometown\'s dark secrets when she becomes obsessed with the unsolved murder of her childhood neighbor—and the disappearance of another girl twenty years later.
             Everyone from Wakarusa, Indiana, remembers the case of January Jacobs, who was found dead in a ditch hours after her family awoke to find her gone. Margot Davies was six at the time, the same age as January—and they were next-door neighbors. In the twenty years since, Margot has grown up, moved away, and become a big-city journalist, but she\'s always been haunted by the fear that it could\'ve been her. And the worst part is, January\'s killer has never been brought to justice.
             When Margot returns home to help care for her sick uncle, it feels like walking into a time capsule. Wakarusa is exactly how she remembered: genial, stifled, secretive. Then news breaks about five-year-old Natalie Clark from the next town over, who\'s gone missing under eerily similar circumstances. With all the old feelings rushing back, Margot vows to find Natalie and solve January\'s murder once and for all.
             But the police, the family, the townspeople—they all seem to be hiding something. And the deeper Margot digs into Natalie\'s disappearance, the more resistance she encounters, and the colder January\'s case feels. Could the killer still be out there? Could it be the same person who kidnapped Natalie? And what will it cost to finally discover what truly happened that night?</item>
@@ -173,9 +176,9 @@
     <string-array name="noveldaisydarker">
         <item>2022</item>
         <item>Mystery · Thriller · Mystery Thriller · Fiction · Audiobook · Suspense · Adult · Horror · Crime · Contemporary</item>
-        <item>The New York Times bestselling Queen of Twists returns…with a family reunion that leads to murder.
+        <item>The New York Times bestselling Queen of Twists returns...with a family reunion that leads to murder.
             After years of avoiding each other, Daisy Darker\'s entire family is assembling for Nana\'s 80th birthday party in Nana\'s crumbling gothic house on a tiny tidal island. Finally back together one last time, when the tide comes in, they will be cut off from the rest of the world for eight hours.
-            The family arrives, each of them harboring secrets. Then at the stroke of midnight, as a storm rages, Nana is found dead. And an hour later, the next family member follows…
+            The family arrives, each of them harboring secrets. Then at the stroke of midnight, as a storm rages, Nana is found dead. And an hour later, the next family member follows...
             Trapped on an island where someone is killing them one by one, the Darkers must reckon with their present mystery as well as their past secrets, before the tide comes in and all is revealed.
             With a wicked wink to Agatha Christie\'s And Then There Were None, Daisy Darker\'s unforgettable twists will leave readers reeling.</item>
     </string-array>
@@ -186,7 +189,7 @@
             It\'s watching.
             Liz Rocher is coming home . . . reluctantly. As a Black woman, Liz doesn\'t exactly have fond memories of Johnstown, Pennsylvania, a predominantly white town. But her best friend is getting married, so she braces herself for a weekend of awkward and passive-aggressive reunions. Liz has grown, though; she can handle whatever awaits her. But on the day of the wedding, somewhere between dancing and dessert, the bride\'s daughter, Caroline, goes missing—and the only thing left behind is a piece of white fabric covered in blood.
             It\'s taking.
-            As a frantic search begins, with the police combing the trees for Caroline, Liz is the only one who notices a pattern: a summer night. A missing girl. A party in the woods. She\'s seen this before. Keisha Woodson, the only other Black girl in school, walked into the woods with a mysterious man and was later found with her chest cavity ripped open and her heart missing. Liz shudders at the thought that it could have been her, and now, with Caroline missing, it can't be a coincidence. As Liz starts to dig through the town's history, she uncovers a horrifying secret about the place she once called home. Children have been going missing in these woods for years. All of them Black. All of them girls.
+            As a frantic search begins, with the police combing the trees for Caroline, Liz is the only one who notices a pattern: a summer night. A missing girl. A party in the woods. She\'s seen this before. Keisha Woodson, the only other Black girl in school, walked into the woods with a mysterious man and was later found with her chest cavity ripped open and her heart missing. Liz shudders at the thought that it could have been her, and now, with Caroline missing, it can\'t be a coincidence. As Liz starts to dig through the town\'s history, she uncovers a horrifying secret about the place she once called home. Children have been going missing in these woods for years. All of them Black. All of them girls.
             It\'s your turn.
             With the evil in the forest creeping closer, Liz knows what she must do: find Caroline, or be entirely consumed by the darkness.</item>
     </string-array>
