--- a/app/src/main/res/layout/activity_detail_novel.xml
+++ b/app/src/main/res/layout/activity_detail_novel.xml
@@ -8,7 +8,8 @@
     tools:context=".DetailNovelActivity">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:padding="15dp">
         <ImageView
             android:id="@+id/detail_novel_image"
             android:layout_width="wrap_content"
