--- a/app/src/main/res/layout/fragment_novel.xml
+++ b/app/src/main/res/layout/fragment_novel.xml
@@ -4,8 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.NovelFragment"
-    android:background="@color/light_grey">
+    tools:context=".ui.NovelFragment">
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/novelRv"
         android:scrollbars="vertical"
@@ -15,5 +14,4 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
-
 </FrameLayout>
